# CppMenuCLI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Menu/: ExitItem.h  IMenuItem.h  MyMenu.cpp  MyMenu.h
Menu/Items/: DemoItem1.h  DemoItem2.h
Operations/: which_files.txt
